LRCI-3393 Update stable suite to use *chrome100 batch

--- a/test.properties
+++ b/test.properties
@@ -2109,6 +2109,9 @@
     test.batch.run.property.query[functional-tomcat90-mysql57-chrome100-jdk8]=\
         ${test.batch.run.property.query[functional-tomcat90-mysql57-jdk8]}
 
+    test.batch.run.property.query[functional-tomcat90-mysql57-chrome100-jdk8_stable]=\
+        (portal.stable == "true")
+
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8]=\
         (\
             (app.server.types == null) OR \
@@ -7737,7 +7740,7 @@
     test.batch.names[stable]=\
         central-requirements-jdk8,\
         functional-smoke-tomcat90-mysql57-jdk8_stable,\
-        functional-tomcat90-mysql57-jdk8_stable,\
+        functional-tomcat90-mysql57-chrome100-jdk8_stable,\
         functional-upgrade-tomcat90-mysql57-jdk8_stable,\
         js-unit-jdk8,\
         modules-compile-jdk8,\
