LPS-170291 Show error message when regex not valid

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -11793,6 +11793,7 @@ pattern-field-label=Pattern
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression.
 patterns=Patterns
 patterns-description=Set the patterns for matching requests to the necessary scopes (method regex::path regex::scope1,scope2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions.
 pause=Pause
 paused=Paused
 pay-now=Pay Now
