artifact:ignore portal-remote-jaxrs-whiteboard-jaxb-json 4.0.9 artifact properties

--- a/modules/.releng/apps/portal-remote/portal-remote-jaxrs-whiteboard-jaxb-json/artifact.properties
+++ b/modules/.releng/apps/portal-remote/portal-remote-jaxrs-whiteboard-jaxb-json/artifact.properties
@@ -1,2 +1,4 @@
-artifact.git.id=09449f773647275eeb1ab46f6bc64e1587f20028
-artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.portal.remote.jaxrs.whiteboard.jaxb.json/4.0.8/com.liferay.portal.remote.jaxrs.whiteboard.jaxb.json-4.0.8.jar
+artifact.git.id=c2d75d6457663c0af404dcebec9d09bd0f6da9c4
+artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.portal.remote.jaxrs.whiteboard.jaxb.json/4.0.9/com.liferay.portal.remote.jaxrs.whiteboard.jaxb.json-4.0.9-sources-commercial.jar
+artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.portal.remote.jaxrs.whiteboard.jaxb.json/4.0.9/com.liferay.portal.remote.jaxrs.whiteboard.jaxb.json-4.0.9-sources.jar
+artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.portal.remote.jaxrs.whiteboard.jaxb.json/4.0.9/com.liferay.portal.remote.jaxrs.whiteboard.jaxb.json-4.0.9.jar
